fix(design.elvia.io): logo in mobile menu shifting position

--- a/packages/web/src/app/shell/header/mobile-menu/mobile-menu.component.scss
+++ b/packages/web/src/app/shell/header/mobile-menu/mobile-menu.component.scss
@@ -18,7 +18,7 @@
     justify-content: flex-start;
     align-items: center;
     cursor: pointer;
-    margin-left: 24px;
+    margin-left: 32px;
 
     img {
       height: 26px;
